// Prisma 7 schema for moyura backend.
// D1 spike (SPEC-ENV-SETUP-001): prisma-client generator with cjs moduleFormat
// for NestJS CommonJS build compatibility. Client is emitted into project src
// (R-A3: compatible with node-linker=hoisted, no node_modules/.prisma symlink reliance).

generator client {
  provider     = "prisma-client"
  output       = "../src/generated/prisma"
  moduleFormat = "cjs"
}

// Prisma 7: connection URLs live in prisma.config.ts (migrations = DIRECT_URL)
// and the runtime PrismaClient receives a pg driver adapter (DATABASE_URL).
datasource db {
  provider = "postgresql"
}

// 첫 도메인 모델(SPEC-AUTH-001, R-B1/B2). app-owned profile.
// id = Supabase auth user id(`sub`)를 PK로 직접 저장한다(단일 키 해석 — M-5).
// 별도 userId/sub 컬럼이나 투기적 도메인 컬럼을 두지 않는다(R-B1, TRUST 5 Readable).
// UPSERT는 id(= sub) PK 유일성에 의존하며 동시성 시 중복 row가 생기지 않는다(R-B4/B5).
model Profile {
  // Supabase user uuid(`sub`). 검증된 JWT의 sub만 이 값으로 들어온다(R-B3/M-5).
  id        String   @id
  // SPEC-MOBILE-004 REQ-MOB4-003/004: 사용자 표시 이름(nullable). 이메일·소셜(Google/향후 Apple)
  // 모든 인증 경로가 공유하는 provider 비종속 영속 필드. null/빈 값이면 온보딩 가드의 리다이렉트 대상이며,
  // 이 필드의 보유 여부가 신규/기존 사용자 판별의 권위 있는 출처다(created_at 비의존, research §6 옵션 A).
  name      String?
  createdAt DateTime @default(now())

  @@map("profile")
}

// SPEC-ACCOUNT-001 REQ-ACCOUNT-003 계정 소멸 툼스톤(부활 차단의 진실 공급원).
// deleteAccount 오케스트레이션이 profile 행을 삭제한 뒤, 잔존 JWT(유예 창 ≤1h)가 GET /me(upsertBySub)로
// profile을 재생성하지 못하도록 이 테이블의 sub 존재 여부로 부활을 차단한다(REQ-ACCOUNT-003).
// sub = 삭제된 Supabase auth user id(= 구 profile.id)를 PK로 직접 저장한다 — FK 없음(profile 행은 이미 삭제됨).
// auth 재가입 시 Supabase가 새 sub를 발급하므로 구 sub 툼스톤과 충돌하지 않는다(R-7).
// RLS: ENABLE ROW LEVEL SECURITY + 정책 없음(default deny) — Prisma는 postgres 롤로 우회(마이그레이션 수동 SQL).
model WithdrawnAccount {
  // 삭제된 sub(= 구 profile.id). PK만으로 존재 여부를 조회한다(부활 차단 게이트).
  sub         String   @id
  withdrawnAt DateTime @default(now()) @map("withdrawn_at")

  @@map("withdrawn_account")
}

// SPEC-MOIM-001 모임 도메인(REQ-MOIM-004~008). 모임 라이프사이클의 루트 엔티티.
// name 최소 컬럼만 둔다(설명/이미지/카테고리는 비범위). 삭제 시 멤버십을 Cascade로 정리한다(R-5).
model Moim {
  id        String       @id @default(uuid())
  name      String
  // SPEC-MOIM-004 REQ-MOIM4-001: 이벤트 일정/장소(additive nullable). 기존 row 는 두 값 모두 null 이며
  // 무중단 마이그레이션으로 추가된다. 일정 없는/장소 없는 모임도 유효(생성 시 optional — 정직 표시 대상).
  startsAt  DateTime?    @map("starts_at")
  location  String?
  // 생성자 sub(= profile.id). owner 멤버십은 MoimMember(role=owner)에 별도 기록된다(REQ-MOIM-004).
  createdBy  String       @map("created_by")
  // SPEC-MOIM-012 REQ-MOIM12-001: 모임 정원(기본 15, 최소 1). 신규 가입 수락(InviteService.accept)이
  // 현재 멤버 수 >= maxMembers 이면 409로 거른다(기존 멤버 재수락은 cap 검사 제외 — 멱등 선검사가 먼저).
  // owner는 PATCH /moims/:id 로 cap을 수정할 수 있다(현재 멤버 수 미만으로 낮춰도 소급 퇴장 없음).
  maxMembers Int          @default(15) @map("max_members")
  createdAt  DateTime     @default(now()) @map("created_at")
  members   MoimMember[]
  // SPEC-MOIM-002 X-3: 초대 역참조(additive). moim 테이블 자체는 무변경 — moim_invite만 신규 CREATE.
  invites   MoimInvite[]
  // SPEC-CHAT-001 T-001: 채팅 메시지 역참조(additive). moim 테이블 자체는 무변경 — chat_message만 신규 CREATE.
  messages  ChatMessage[]
  // SPEC-MOIM-005 REQ-MOIM5-001: 투표 역참조(additive). moim 테이블 자체는 무변경 — poll만 신규 CREATE.
  polls     Poll[]
  // SPEC-MOIM-EXPENSE-001 REQ-EXP-001: 경비 역참조(additive). moim 테이블 자체는 budget 컬럼 추가 외 무변경.
  expenses    Expense[]
  settlements Settlement[]
  // SPEC-NOTIFICATIONS-001 M2: 정산 요청 역참조(additive). moim 테이블 자체는 무변경 — settlement_request 만
  // 신규 CREATE. 모임 삭제 시 그 모임의 정산 요청도 Cascade 로 함께 정리된다(고아 요청 방지).
  settlementRequests SettlementRequest[]
  // SPEC-MOIM-EXPENSE-001 REQ-EXP-001: 선택적 모임 예산(KRW 정수, nullable). 미설정=null(남은예산 카드 미표시).
  budget      Int?         @map("budget")
  // SPEC-SCHEDULE-001: 일정 조율 세션 역참조(additive, 모임당 0..1). moim 테이블 자체는 무변경 —
  // schedule_event/schedule_slot 만 신규 CREATE. 모임 삭제 시 Cascade 로 함께 정리된다.
  schedule    ScheduleEvent?
  // SPEC-NOTIFICATIONS-001 M1: 인앱 알림 역참조(additive). moim 테이블 자체는 무변경 — notification 만 신규
  // CREATE. 모임 삭제 시 그 모임 컨텍스트의 알림도 Cascade 로 함께 정리된다(고아 알림 방지).
  notifications Notification[]
  // SPEC-SAFETY-001 M1: 신고 역참조(additive). moim 테이블 자체는 무변경 — report 만 신규 CREATE.
  // 모임 삭제 시 그 모임 컨텍스트의 신고도 Cascade 로 함께 정리된다(고아 신고 방지, report.moim_id FK).
  reports       Report[]

  @@map("moim")
}

// SPEC-MOIM-EXPENSE-001 REQ-EXP-001: 경비 헤더(지출 1건). 분담은 ExpenseShare 로 분리 materialize.
// amount=KRW 정수(≥1), category=프리셋(컨트롤러 검증), payerUserId=결제자 sub, createdBy=기록자 sub.
// updatedAt: @updatedAt — PATCH 수정 시각 자동 기록(DeviceToken 선례). @@index([moimId]) 모임별 목록 커버.
model Expense {
  id            String         @id @default(uuid())
  moimId        String         @map("moim_id")
  amount        Int
  category      String
  payerUserId   String         @map("payer_user_id")
  memo          String?
  createdBy     String         @map("created_by")
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  moim          Moim           @relation(fields: [moimId], references: [id], onDelete: Cascade)
  shares        ExpenseShare[]

  @@index([moimId])
  @@map("expense")
}

// SPEC-MOIM-EXPENSE-001 REQ-EXP-001: 경비 분담 행(경비당 멤버당 1행).
// 복합 PK @@id([expenseId, userId]) — MoimMember/PollVote 복합 PK 선례. shareAmount=분담 금액(KRW 정수, ≥0).
// 비율 분배도 생성 시 금액으로 환산해 여기 저장한다(비율 컬럼 없음 — 정산 코드는 항상 금액만 읽음).
model ExpenseShare {
  expenseId   String   @map("expense_id")
  userId      String   @map("user_id")
  shareAmount Int      @map("share_amount")
  createdAt   DateTime @default(now()) @map("created_at")
  expense     Expense  @relation(fields: [expenseId], references: [id], onDelete: Cascade)

  @@id([expenseId, userId])
  @@index([userId])
  @@map("expense_share")
}

// SPEC-MOIM-EXPENSE-001 REQ-EXP-001: 정산 완료 마커 영속(정보성 스냅샷).
// surrogate id PK — 같은 (from,to,amount) 거래가 경비 변동으로 사라졌다 재출현해도 stale 마커와 구별 가능.
// 마커는 삭제되지 않고 stale 로 남는다(안전 기본값 — 자동 송금/취소 없음). @@index([moimId]) 모임별 마커 조회 커버.
model Settlement {
  id          String   @id @default(uuid())
  moimId      String   @map("moim_id")
  fromUserId  String   @map("from_user_id")
  toUserId    String   @map("to_user_id")
  amount      Int
  settledBy   String   @map("settled_by")
  settledAt   DateTime @default(now()) @map("settled_at")
  moim        Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)

  @@index([moimId])
  @@map("settlement")
}

// SPEC-NOTIFICATIONS-001 M2: 정산 "요청"(creditor → debtor 지불 요청). 기존 Settlement(정산 "완료" 마커)와
// 의도적으로 분리한 별도 테이블이다 — Settlement 는 listExpenses 가 (from,to,amount) 로 매칭해 settled=true 를
// 계산하는 "완료됨" 스냅샷이라, 여기에 status 컬럼을 얹으면 그 매칭 로직에 "요청(pending)" 행이 섞여 settled
// 계산을 오염시킨다(회귀 위험). 두 개념(요청=아직 안 냄 / 완료=냈음)을 별 테이블로 분리하면 인가·수명주기·이벤트
// (settlement.requested→채무자 / settlement.completed→요청자)가 각각 독립적이다. surrogate id PK.
// FK ON DELETE CASCADE — moim 삭제 시 요청도 정리된다. RLS enable + 정책 없음(notification 선례 default deny).
model SettlementRequest {
  id          String   @id @default(uuid())
  moimId      String   @map("moim_id")
  // 요청자 sub(= 채권자, 돈을 받을 사람). 가드-검증 sub 만 들어온다(mass-assignment 차단 — 전 도메인 동일).
  requesterId String   @map("requester_id")
  // 채무자 sub(= 돈을 낼 사람). 알림 수신 대상(settlement.requested → debtorId).
  debtorId    String   @map("debtor_id")
  amount      Int
  createdAt   DateTime @default(now()) @map("created_at")
  moim        Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)

  // 모임별 정산 요청 조회를 커버한다.
  @@index([moimId])
  @@map("settlement_request")
}

// SPEC-MOIM-002 초대 링크(REQ-INV-001~006). 모임당 다중 초대 + 만료(기본 7일/상한 30일) + 선택적 max_uses + revoke.
// token은 추측 불가(≥128-bit, crypto.randomBytes(32)=256-bit) @unique — 수락은 token으로만 조회한다.
// 상태 = (revokedAt null? + expiresAt > now? + usedCount < maxUses?) 조합으로 service가 판정한다(404/410/409).
model MoimInvite {
  id        String    @id @default(uuid())
  moimId    String    @map("moim_id")
  // 추측 불가 초대 토큰(base64url(32 bytes)). 수락 경로의 유일한 조회 키.
  token     String    @unique
  // 만료 시각(필수). 발급 시 기본 now+7d, owner 조정 가능하되 상한 now+30d(REQ-INV-001).
  expiresAt DateTime  @map("expires_at")
  // 선택적 사용 횟수 제한. null이면 무제한. 초과 수락은 409(REQ-INV-006).
  maxUses   Int?      @map("max_uses")
  // 수락 성공 시마다 1 증가(조건부 원자 증가로 maxUses 초과 방지).
  usedCount Int       @default(0) @map("used_count")
  // 폐기 시각. 설정되면 이후 수락은 410(REQ-INV-003 / AC-3c).
  revokedAt DateTime? @map("revoked_at")
  createdBy String    @map("created_by")
  createdAt DateTime  @default(now()) @map("created_at")
  moim      Moim      @relation(fields: [moimId], references: [id], onDelete: Cascade)

  @@map("moim_invite")
}

// 멤버십 데이터(누가 어느 모임의 멤버인가) + 모임별 표시 이름(nickname).
// nickname은 profile에 name 필드가 없는 것을 보완하는 표시 이름 출처다(게이트 결정 — 채팅 sender 해석).
// PK는 (moimId, userId) 복합 — 한 사용자는 한 모임에 한 번만 속한다.
model MoimMember {
  moimId   String   @map("moim_id")
  // 멤버 sub(= profile.id). 검증된 sub만 들어온다(mass-assignment 차단 — profile 패턴 동일).
  userId   String   @map("user_id")
  // 모임별 표시 이름(필수). 생성 시 owner row에 host nickname이 주입된다(REQ-MOIM-004).
  nickname String
  // "owner" | "member". owner는 탈퇴 불가(REQ-MOIM-008), 삭제는 owner 전용(REQ-MOIM-003).
  role     String   @default("member")
  joinedAt DateTime @default(now()) @map("joined_at")
  // SPEC-ACCOUNT-001 REQ-ACCOUNT-002: 탈퇴 마킹(additive nullable). NULL = 활성 멤버.
  // 탈퇴 시 멤버 행은 원장 무결성 보존을 위해 삭제하지 않고 nickname='탈퇴한 사용자'로 익명화하되
  // 이 컬럼을 now()로 세팅해 "유령 멤버"로 표식한다. 정원 count(withdrawnAt:null 필터)와
  // 소유권 이양 대상 선정(withdrawnAt:null만 활성)이 이 마커를 소비한다(유령 이양 금지, R-4b/R-6).
  // 기존 row 는 모두 NULL(비파괴 additive) — 복합 PK/인덱스/FK 불변.
  withdrawnAt DateTime? @map("withdrawn_at")
  moim     Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)

  @@id([moimId, userId])
  @@map("moim_member")
}

// SPEC-CHAT-001 모임 채팅 메시지(REQ-CHAT-001/003). insert-only(수정/삭제 비범위 — spec §5).
// PK는 BigInt autoincrement — 단조 증가 식별자로 keyset 커서(내림차순/최신순)의 안정 정렬 기준이 된다(REQ-CHAT-003).
// 주의: BigInt PK는 NestJS JSON 직렬화 불가 → 응답 DTO에서 id.toString()으로 매핑한다(T-006).
// content 길이 제한은 DTO(400) + DB CHECK(마이그레이션 수동 SQL)로 이중 강제한다.
model ChatMessage {
  id        BigInt   @id @default(autoincrement())
  moimId    String   @map("moim_id")
  // 발신자 sub(= profile.id). 검증된 sub만 들어온다(mass-assignment 차단 — profile/moim 패턴 동일).
  senderId  String   @map("sender_id")
  content   String
  createdAt DateTime @default(now()) @map("created_at")
  moim      Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)

  // keyset 페이지네이션 인덱스: (moimId, id desc)로 모임별 최신순 조회를 커버한다.
  @@index([moimId, id(sort: Desc)])
  @@map("chat_message")
}

// SPEC-MOIM-005 모임 투표(REQ-MOIM5-001). 모임당 다수의 투표(poll)를 둔다 — 질문 한 줄 + 선택지(option) 다수.
// additive 신규 테이블만 추가하고 moim 테이블은 무변경(add_moim_invite/add_chat 선례). 삭제 시 moim→poll→option/vote
// 가 Cascade 로 정리된다(데이터 무결성 — 삭제 UI 가 아니라 FK 제약, spec §4).
model Poll {
  id        String       @id @default(uuid())
  moimId    String       @map("moim_id")
  // 투표 질문(한 줄). trim 후 빈 값은 컨트롤러가 400 으로 거른다(ValidationPipe 부재 보완).
  question  String
  // SPEC-MOIM-006 REQ-MOIM6-001: poll 별 다중 선택 옵트인(additive). false(기본)=단일 선택(투표=교체),
  // true=다중 선택(투표=토글, 멤버당 옵션당 0..N 표). 기존 row 는 모두 false 로 단일 선택을 보존한다.
  multiSelect Boolean    @default(false) @map("multi_select")
  // SPEC-MOIM-007 REQ-MOIM7-001: 마감 시각(nullable, @default 없음). deadline(미래 시각) + 수동 마감(=now) 두 역할.
  // closesAt != null AND closesAt <= now 이면 CLOSED. 기존 row 는 모두 null(마감 없음 — MOIM-005/006 동작 보존).
  closesAt  DateTime?    @map("closes_at")
  // SPEC-MOIM-008 REQ-MOIM8-001: 투표 종류(additive, @default="general"). "general"=자유 텍스트 옵션, "date"=날짜 옵션.
  // Prisma enum 이 아닌 string 컬럼 — CREATE TYPE 마이그레이션 마찰 회피. 허용 값 검증은 컨트롤러가 담당(미지 값 → 400).
  // 기존 row 는 모두 kind='general'(일반 투표 — MOIM-005/006/007 동작 보존).
  kind      String       @default("general") @map("kind")
  // 생성자 sub(= profile.id). 가드-검증 sub 만 들어온다(mass-assignment 차단 — moim/chat 패턴 동일).
  createdBy String       @map("created_by")
  createdAt DateTime     @default(now()) @map("created_at")
  moim      Moim         @relation(fields: [moimId], references: [id], onDelete: Cascade)
  options   PollOption[]
  votes     PollVote[]

  // 모임별 투표 목록 조회(GET /moims/:id/polls)를 커버한다.
  @@index([moimId])
  @@map("poll")
}

// SPEC-MOIM-005 투표 선택지(REQ-MOIM5-001). 한 poll 에 2개 이상. position 컬럼 없음(spec §4 — id 결정적 정렬).
model PollOption {
  id         String     @id @default(uuid())
  pollId     String     @map("poll_id")
  // 선택지 라벨(자유 텍스트). trim 후 비지 않은 항목만 컨트롤러가 모아 ≥2 를 강제한다.
  // 날짜 투표(kind="date")의 경우 label 은 optionDate.toISOString()(정규 ISO) — 웹이 포맷해 표시한다.
  label      String
  // SPEC-MOIM-008 REQ-MOIM8-001: 날짜 옵션의 시각(nullable). 날짜 투표(kind="date") 옵션만 채움.
  // 일반 투표(kind="general") 옵션은 optionDate=null(MOIM-005/006/007 동작 보존). 기존 row 모두 null.
  optionDate DateTime?  @map("option_date")
  poll       Poll       @relation(fields: [pollId], references: [id], onDelete: Cascade)
  votes      PollVote[]

  // poll 별 선택지 조회를 커버한다.
  @@index([pollId])
  @@map("poll_option")
}

// SPEC-MOIM-006 투표 표(REQ-MOIM6-001/003). 복합 PK (pollId, optionId, userId) 가 "멤버당 옵션당 한 표
// (0..N 표)" 불변식을 DB 레벨에서 강제한다 — 다중 선택 poll 에서 한 멤버가 옵션 여러 개를 동시에 보유할 수 있다.
// 단일 선택 poll(multiSelect=false)은 service 가 deleteMany+create 로 멤버당 한 표만 유지한다(교체). 다중(true)은
// (pollId,optionId,userId) 토글(존재하면 delete, 없으면 create). poll/option 삭제 시 표도 Cascade 로 정리된다.
// 비파괴 PK 변경(MOIM-005 의 (pollId,userId) → 이 PK): 기존 단일 선택 표는 (pollId,userId) 당 한 row 라 그
// (pollId,optionId,userId) 도 이미 유일 → 새 PK 를 위반 없이 만족(row 손실 0). 비파괴 마이그레이션 선례.
model PollVote {
  pollId    String     @map("poll_id")
  optionId  String     @map("option_id")
  // 투표자 sub(= profile.id). 가드-검증 sub 만 들어온다(mass-assignment 차단).
  userId    String     @map("user_id")
  createdAt DateTime   @default(now()) @map("created_at")
  poll      Poll       @relation(fields: [pollId], references: [id], onDelete: Cascade)
  option    PollOption @relation(fields: [optionId], references: [id], onDelete: Cascade)

  // 옵션별 득표 수 집계(voteCount)를 커버한다.
  @@index([optionId])
  // 복합 PK = 멤버당 옵션당 한 표 불변식(다중 선택 = 옵션마다 0..N 표 토글, 단일 선택 = 교체로 한 표 유지).
  @@id([pollId, optionId, userId])
  @@map("poll_vote")
}

// SPEC-CHAT-002 디바이스 토큰 레지스트리(REQ-PUSH-002/003). FCM 발송 대상 디바이스를 사용자에 연결한다.
// token을 PK로 둔다 — 등록은 token 기준 upsert로 중복 없이 저장하고(REQ-PUSH-002), 해제는 token으로 삭제한다
// (REQ-PUSH-003 orphan token 방지). 같은 디바이스 토큰이 다른 사용자로 재등록되면 userId가 갱신된다(디바이스 핸드오프).
// userId(= profile.id)는 가드-검증 sub만 들어온다(mass-assignment 차단 — profile/moim 패턴 동일).
// @@index(userId)로 사용자별 토큰 조회(수신 대상 산정)를 커버한다. 게스트(웹)는 디바이스가 없어 row 자체가 없다.
model DeviceToken {
  // FCM/Expo 디바이스 push 토큰(PK). 등록 upsert·해제 delete의 유일한 키.
  token     String   @id
  // 토큰 소유 사용자 sub(= profile.id). 검증된 sub만 들어온다(mass-assignment 차단).
  userId    String   @map("user_id")
  // "android" | "ios". 클라이언트가 전달하되 컨트롤러가 비어 있음을 400으로 거른다(ValidationPipe 부재 보완).
  platform  String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // 사용자별 토큰 조회(수신 대상 산정 시 userId in [...] 필터)를 커버한다.
  @@index([userId])
  @@map("device_token")
}

// SPEC-SCHEDULE-001 일정 조율 세션(When2meet 스타일). 모임당 0..1개(moimId @unique) — 텍스트 날짜 투표를
// 대체하는 시각적 가능시간 조율. owner 가 후보 날짜들 + 하루 시간 범위를 설정하면, 멤버가 그리드에서 가능한
// (날짜×시간 슬롯)을 칠하고, 히트맵으로 겹침을 본 뒤 owner 가 확정한다(→ moim.startsAt 갱신).
//
// [자정 넘김] 시간 범위는 "후보일 00:00 기준 분(minute)"으로 저장한다. endMinute 가 1440(24:00)을 넘으면
// 다음날 새벽까지 이어지는 범위다(예: 18:00~익일 02:00 = startMinute 1080, endMinute 1560). 슬롯의
// startMinute 도 같은 기준이라 1440 이상이면 자연히 다음날 슬롯이 된다 — 별도 날짜 컬럼 없이 한 축으로 표현된다.
model ScheduleEvent {
  id          String   @id @default(uuid())
  // 모임당 1개(@unique) — 재설정은 upsert. owner 만 생성/재설정/확정/삭제할 수 있다.
  moimId      String   @unique @map("moim_id")
  // 생성자 sub(= profile.id). 가드-검증 sub 만 들어온다(mass-assignment 차단 — moim/expense 패턴 동일).
  createdBy   String   @map("created_by")
  // 후보 날짜 배열(ISO date "YYYY-MM-DD", 임의 다수). Postgres text[] — 연속 범위가 아닌 임의 날짜 선택 허용.
  dates       String[] @map("dates")
  // 하루 시간 범위(후보일 00:00 기준 분). endMinute > startMinute. endMinute > 1440 이면 자정 넘김(다음날 새벽).
  startMinute Int      @map("start_minute")
  endMinute   Int      @map("end_minute")
  // 슬롯 단위(분). 기본 30분(When2meet 표준). 그리드 행 = (endMinute-startMinute)/slotMinutes 개.
  slotMinutes Int      @default(30) @map("slot_minutes")
  // 확정 시각(nullable). owner 확정 시 기록 — 동시에 moim.startsAt 이 확정 (날짜+시간)으로 갱신된다.
  confirmedAt DateTime? @map("confirmed_at")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")
  moim        Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)
  slots       ScheduleSlot[]

  @@map("schedule_event")
}

// SPEC-SCHEDULE-001 멤버별 가능 슬롯. 한 (멤버, 날짜, 시작분) = 한 행. 멤버가 그리드에서 칠한 셀들을
// 통째로 교체 저장한다(PUT /me = deleteMany(내 것) + createMany). 복합 PK 가 "멤버당 슬롯당 1행" 불변식을
// DB 레벨에서 강제한다(중복 칠 방지). 집계(히트맵)는 슬롯별 userId 수를 세어 산출한다.
model ScheduleSlot {
  scheduleEventId String   @map("schedule_event_id")
  // 가능 멤버 sub(= profile.id). 가드-검증 sub 만 들어온다(mass-assignment 차단).
  userId          String   @map("user_id")
  // 슬롯 날짜(ISO date "YYYY-MM-DD"). ScheduleEvent.dates 중 하나여야 한다(service 가 검증).
  date            String
  // 슬롯 시작(후보일 00:00 기준 분). startMinute~endMinute 범위 안 + slotMinutes 격자에 정렬되어야 한다.
  startMinute     Int      @map("start_minute")
  createdAt       DateTime @default(now()) @map("created_at")
  event           ScheduleEvent @relation(fields: [scheduleEventId], references: [id], onDelete: Cascade)

  // 세션별 전체 슬롯 조회(히트맵 집계)를 커버한다.
  @@index([scheduleEventId])
  // 멤버당 슬롯당 1행 불변식(중복 칠 방지). PUT /me 교체 저장이 이 PK 에 의존한다.
  @@id([scheduleEventId, userId, date, startMinute])
  @@map("schedule_slot")
}

// SPEC-NOTIFICATIONS-001 M1 인앱 알림(fan-out = 수신자당 1행). 모임 정원 상한(≈15)으로 이벤트당 쓰기가
// 유계라 fan-out 을 채택한다 — read/unread·미읽음 카운트가 단일 인덱스 O(log n)이고 readAt 이 행 자체에 있어
// per-item/mark-all-read 가 자명하다. PushListener 의 수신자 산정(멤버 − actor)과 동형이라 리스너 로직을 답습한다.
// id 는 BigInt autoincrement — chat_message 선례의 keyset 커서 기준(응답 DTO 는 id.toString()). type 은 Prisma
// enum 이 아닌 String 컬럼(poll.kind/expense.category/device_token.platform 컨벤션 — CREATE TYPE 마찰 회피).
// 허용값은 도메인 상수(리스너 NOTIFICATION_TYPE_*)로 관리한다. 웹은 백엔드 API 로만 알림을 읽으므로(전 도메인
// 동일) notification 테이블은 마이그레이션 수동 SQL 로 RLS enable + 정책 없음(PostgREST 직독 차단 = default deny).
model Notification {
  id          BigInt    @id @default(autoincrement())
  // 수신자 sub(= profile.id). 가드-검증 sub 만 이 값으로 들어온다. 모든 조회는 recipientId=sub 로 필터한다.
  recipientId String    @map("recipient_id")
  // 알림 종류(enum 아님 — String 컬럼). 허용값은 리스너 상수(예: 'member.joined'). 이벤트명과는 별개 값이다.
  type        String
  // 컨텍스트 모임 id(현 전 타입 moim-scoped). Cascade 로 모임 삭제 시 알림도 정리된다.
  moimId      String    @map("moim_id")
  // 유발자 sub(nullable — 무행위자 알림 대비). nickname 은 저장하지 않고 응답 시점에 해석한다(트리거 thin 원칙).
  actorId     String?   @map("actor_id")
  // 타입별 미리보기 + 딥링크 타깃 id. M1 member.joined 는 추가 미리보기가 없어 {} 로 둔다(DB @default 도 "{}").
  data        Json      @default("{}")
  // nullable = 안읽음. 읽음 처리 시 now 로 갱신한다(mark-all/per-item).
  readAt      DateTime? @map("read_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  moim        Moim      @relation(fields: [moimId], references: [id], onDelete: Cascade)

  // 피드 keyset 페이지네이션: (recipientId, id desc)로 수신자별 최신순 조회를 커버한다.
  @@index([recipientId, id(sort: Desc)])
  // 미읽음 카운트 / mark-all: (recipientId, readAt)로 recipientId=sub AND readAt=null 필터를 커버한다.
  @@index([recipientId, readAt])
  @@map("notification")
}

// SPEC-SAFETY-001 M1 차단(REQ-BLK-001/003, REQ-FLT-006). 전역(모임 무관) 1-way 차단 — 매칭 키는 userId(sub)만이며
// (게스트·명명 계정 동일 취급, REQ-BLK-003) 차단자 화면에서만 대상 UGC 를 숨긴다. 복합 PK (blockerId, blockedUserId)
// 가 "차단자당 대상당 한 행" 불변식을 DB 레벨에서 강제한다 — createBlock 은 P2002 을 멱등(200)으로 흡수한다.
// 양쪽 user 컬럼은 코드베이스 컨벤션대로 FK 없는 TEXT soft-ref(profile 삭제/게스트 무관 — 고아 정리는 SPEC-ACCOUNT-001
// deleteAccount 가 prisma 직접 접근으로 담당, 순환 의존 회피). RLS enable + 정책 없음(default deny, 마이그레이션 수동 SQL).
model Block {
  // 차단자 sub(= profile.id). 가드-검증 sub 만 들어온다(WHERE 내장 인가 — mass-assignment 차단).
  blockerId     String   @map("blocker_id")
  // 차단 대상 sub(= profile.id). FK 없음(soft-ref).
  blockedUserId String   @map("blocked_user_id")
  createdAt     DateTime @default(now()) @map("created_at")

  // getHiddenUserIds(sub) 정방향 조회(blockerId=sub → blockedUserId)를 커버한다.
  @@index([blockerId])
  // getBlockersOf(userIds) 역방향 조회(blockedUserId in → blockerId 집합, REQ-FLT-006 발신 push 필터)를 커버한다.
  @@index([blockedUserId])
  // 차단자당 대상당 한 행 불변식(멱등 — 중복 차단 방지).
  @@id([blockerId, blockedUserId])
  @@map("block")
}

// SPEC-SAFETY-001 M1 신고(REQ-RPT-001/004/005, REQ-STO-001). 단일 PK 콘텐츠 4종만 참조한다(chat_message/poll/
// expense/settlement_request — 복합 PK 콘텐츠는 단일 id 참조 불가라 400 거부, REQ-RPT-004). 신고는 차단과 독립이며
// (신고 ≠ 차단, REQ-RPT-002) createReport 는 report 행만 만들고 block 은 만들지 않는다. 신고자 측 숨김의 진실
// 공급원이다(getHiddenUserIds 의 report 항 = reporterId=sub → targetUserId).
// contentId 는 TEXT 통일 저장 — chat_message(BigInt PK) 필터 시에만 BigInt 캐스팅한다(REQ-RPT-005). content_type 은
// Prisma enum 이 아닌 String 컬럼(poll.kind/notification.type 컨벤션 — CREATE TYPE 마찰 회피), 허용값은 마이그레이션
// 수동 SQL 의 CHECK 제약으로 강제한다. reporter/target user 컬럼은 FK 없는 TEXT soft-ref, moim_id 만 FK CASCADE.
// RLS enable + 정책 없음(default deny, 마이그레이션 수동 SQL) — 운영자 수동 DB 조회는 postgres 롤 경유(RLS 미적용).
model Report {
  id           String   @id @default(uuid())
  // 신고자 sub(= profile.id). 가드-검증 sub 만 들어온다(WHERE 내장 인가 — mass-assignment 차단). FK 없음(soft-ref).
  reporterId   String   @map("reporter_id")
  // 신고 대상(피신고 콘텐츠 작성자) sub. FK 없음(soft-ref).
  targetUserId String   @map("target_user_id")
  // 신고 컨텍스트 모임 id. moim 삭제 시 신고도 Cascade 로 정리된다(report_moim_id_fkey).
  moimId       String   @map("moim_id")
  // 신고 사유(자유 텍스트). 빈 값은 컨트롤러가 400 으로 거른다(ValidationPipe 부재 보완).
  reason       String
  // 신고 콘텐츠 타입(String 컬럼). 허용값 = chat_message|poll|expense|settlement_request(마이그레이션 CHECK 제약).
  contentType  String   @map("content_type")
  // 신고 콘텐츠 id(TEXT 통일). chat_message(BigInt PK)는 필터 시 BigInt 캐스팅(REQ-RPT-005).
  contentId    String   @map("content_id")
  createdAt    DateTime @default(now()) @map("created_at")
  moim         Moim     @relation(fields: [moimId], references: [id], onDelete: Cascade)

  // getHiddenUserIds(sub)의 신고 항 정방향 조회(reporterId=sub → targetUserId)를 커버한다.
  @@index([reporterId])
  // 대상 유저별 신고 조회(운영자 수동 검토, REQ-STO-001)를 커버한다.
  @@index([targetUserId])
  // 모임별 신고 조회를 커버한다.
  @@index([moimId])
  @@map("report")
}
