%% Mermaid ER diagram — 수동 갱신 (db.yaml auto-sync 비활성)
%% 기준: apps/backend/prisma/schema.prisma + 마이그레이션 파일
%% 최종 갱신: 2026-07-03 (SPEC-SAFETY-001/SPEC-ACCOUNT-001 sync — BLOCK + REPORT + WITHDRAWN_ACCOUNT 엔티티 추가, MOIM_MEMBER.withdrawn_at 추가)
erDiagram
    PROFILE {
        string id PK "Supabase JWT sub (uuid)"
        string name "사용자 이름 (nullable, SPEC-MOBILE-004)"
        timestamp created_at
    }

    MOIM {
        string id PK "uuid() 자동 생성"
        string name "모임 이름"
        string created_by "생성자 sub (= PROFILE.id)"
        timestamp created_at
        timestamp starts_at "이벤트 시작 일시 (nullable — SPEC-MOIM-004)"
        string location "이벤트 장소 자유 텍스트 (nullable — SPEC-MOIM-004)"
    }

    MOIM_MEMBER {
        string moim_id PK,FK "→ MOIM.id onDelete Cascade"
        string user_id PK "멤버 sub (= PROFILE.id)"
        string nickname "모임별 표시 이름"
        string role "owner | member (default: member)"
        timestamp joined_at
        timestamp withdrawn_at "탈퇴 마킹 nullable (SPEC-ACCOUNT-001) — NULL=활성 멤버"
    }

    MOIM_INVITE {
        string token PK "CSPRNG ≥128-bit 불투명 토큰"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string created_by "발급자 sub (= PROFILE.id)"
        timestamp expires_at "만료 시각 (상한 30일)"
        int max_uses "최대 수락 횟수 (nullable = 무제한)"
        int used_count "현재 수락 횟수 (default: 0)"
        timestamp revoked_at "폐기 시각 (nullable = 유효)"
        timestamp created_at
    }

    CHAT_MESSAGE {
        bigint id PK "BigInt 자동 증가 — keyset 커서 기준"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string sender_id "발신자 sub (= PROFILE.id)"
        string content "메시지 본문 (CHECK 1..2000자)"
        timestamp created_at
    }

    DEVICE_TOKEN {
        string token PK "FCM/Expo 푸시 토큰 (디바이스별 고유)"
        string user_id "소유자 sub (= PROFILE.id, 논리적 연결 — FK 없음)"
        string platform "ios | android"
        timestamp created_at
        timestamp updated_at "Prisma @updatedAt"
    }

    POLL {
        string id PK "uuid() 자동 생성"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string question "투표 질문"
        string created_by "생성자 sub (= PROFILE.id)"
        timestamp created_at
        boolean multi_select "poll별 다중 선택 opt-in (default false — SPEC-MOIM-006)"
    }

    POLL_OPTION {
        string id PK "uuid() 자동 생성"
        string poll_id FK "→ POLL.id onDelete Cascade"
        string label "선택지 텍스트"
    }

    POLL_VOTE {
        string poll_id PK,FK "→ POLL.id onDelete Cascade"
        string option_id PK,FK "→ POLL_OPTION.id onDelete Cascade (SPEC-MOIM-006 PK 변경)"
        string user_id PK "투표자 sub (= PROFILE.id)"
        timestamp created_at
    }

    NOTIFICATION {
        bigint id PK "BigInt 자동 증가 — keyset 커서 (SPEC-NOTIFICATIONS-001 M1)"
        string recipient_id "수신자 sub (= PROFILE.id)"
        string type "알림 종류 String 컨벤션 (예: member.joined)"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string actor_id "유발자 sub (nullable)"
        json data "타입별 미리보기 + 딥링크 id (default {})"
        timestamp read_at "nullable = 안읽음"
        timestamp created_at
    }

    SETTLEMENT_REQUEST {
        string id PK "uuid() 자동 생성 (SPEC-NOTIFICATIONS-001 M2)"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string requester_id "채권자 sub (= PROFILE.id)"
        string debtor_id "채무자 sub (= PROFILE.id)"
        int amount "요청 금액 (원 단위)"
        timestamp created_at
    }

    WITHDRAWN_ACCOUNT {
        string sub PK "삭제된 Supabase auth user id (= 구 PROFILE.id). FK 없음(soft tombstone)"
        timestamp withdrawn_at "탈퇴 처리 시각 (SPEC-ACCOUNT-001 REQ-ACCOUNT-003)"
    }

    BLOCK {
        string blocker_id PK "차단자 sub (= PROFILE.id). FK 없음(soft-ref)"
        string blocked_user_id PK "차단 대상 sub. FK 없음(soft-ref)"
        timestamp created_at
    }

    REPORT {
        string id PK "uuid() 자동 생성"
        string reporter_id "신고자 sub (= PROFILE.id). FK 없음(soft-ref)"
        string target_user_id "피신고 콘텐츠 작성자 sub. FK 없음(soft-ref)"
        string moim_id FK "→ MOIM.id onDelete Cascade"
        string reason "신고 사유(자유 텍스트)"
        string content_type "chat_message|poll|expense|settlement_request (CHECK 제약)"
        string content_id "신고 콘텐츠 id (TEXT 통일 — BigInt PK는 필터 시 캐스팅)"
        timestamp created_at
    }

    MOIM ||--o{ MOIM_MEMBER : "has members (Cascade)"
    MOIM ||--o{ MOIM_INVITE : "has invites (Cascade)"
    MOIM ||--o{ CHAT_MESSAGE : "has messages (Cascade)"
    MOIM ||--o{ POLL : "has polls (Cascade)"
    POLL ||--o{ POLL_OPTION : "has options (Cascade)"
    POLL ||--o{ POLL_VOTE : "has votes (Cascade)"
    POLL_OPTION ||--o{ POLL_VOTE : "voted by (Cascade)"
    MOIM ||--o{ NOTIFICATION : "has notifications (Cascade)"
    MOIM ||--o{ SETTLEMENT_REQUEST : "has settlement requests (Cascade)"
    MOIM ||--o{ REPORT : "has reports (Cascade — report.moim_id FK)"
